cmake_minimum_required(VERSION 4.2)
project(HMIIOS VERSION 0.1)

# Include the file so the function is defined globally
include(cmake/hmiios001-config.cmake)

set(HMIIOS_VERSION 0.0.1)
add_compile_definitions(PROJECT_VERSION="${HMIIOS_VERSION}")
set(PROJECT_REVISION "")
find_package(Git QUIET)
if (GIT_FOUND)
execute_process(
    COMMAND ${GIT_EXECUTABLE} describe --tag --dirty
    OUTPUT_VARIABLE PROJECT_REVISION
    OUTPUT_STRIP_TRAILING_WHITESPACE
    ERROR_QUIET
    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
)
endif()

add_compile_definitions(PROJECT_REVISION="${PROJECT_REVISION}")
if ("${PROJECT_REVISION}" MATCHES "^.+-([0-9]+)-[a-zA-Z0-9]+$")
    set(PROJECT_REVISION_NUMBER ${CMAKE_MATCH_1})
else()
    set(PROJECT_REVISION_NUMBER 0)
endif()

set(PROJECT_YEAR 2026)
#set(USED_HMIIOS_FRAMEWORK hmiios001)
set(PROJECT_BIN_PATH ${CMAKE_BINARY_DIR}/bin)
set(PROJECT_LIB_PATH ${CMAKE_BINARY_DIR}/lib)

find_package(Qt6 COMPONENTS Widgets REQUIRED)
execute_process(
    COMMAND ${QT_QMAKE_EXECUTABLE} -query QT_INSTALL_BINS
    OUTPUT_VARIABLE QT_INSTALL_BINS
    )
string(REGEX REPLACE "\n$" "" QT_INSTALL_BINS "${QT_INSTALL_BINS}")

# do magic
#find_package(${USED_HMIIOS_FRAMEWORK} COMPONENTS core)
set(HMIIOS_VERSION_STR "${HMIIOS_MAJOR_VERSION}.${HMIIOS_MINOR_VERSION}.${HMIIOS_PATCH_VERSION}")
set(PROJECT_ENV_PATH "$ENV{PATH}")
string(REGEX REPLACE "\\\\" "/" PROJECT_ENV_PATH "${PROJECT_ENV_PATH}")

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTORCC ON)

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

if (MSVC)
    set(CMAKE_C_FLAGS "/utf-8 ${CMAKE_C_FLAGS}")
    set(CMAKE_CXX_FLAGS "/utf-8 ${CMAKE_CXX_FLAGS}")
endif()

set_property(GLOBAL PROPERTY USE_FOLDERS ON)

add_subdirectory(hmiios2014)